default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/NVMStatsSF__NVM_Agent_State_Detail__c.object-meta.xml
<CustomObject>
    <label>NVM Agent State Detail</label>
    <nameField>
        <displayFormat>ASD-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Agent State Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>