default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__AgentId__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__AgentId__c</fullName>
    <label>AgentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>