default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__Call_Key__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Call_Key__c</fullName>
    <description>A key to use to match the call when calculating Handling time.  Until Call GUID passed, we will use a combination of start time, end time and agent ID.  Make this an external ID for indexing.  NB rows with this key may not be unique if data loads overlap so we don&#39;t enforce that.  Not all calls are included in handle time calculations - some may not have any - so field is not mandatory</description>
    <externalId>true</externalId>
    <label>Call Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>