default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__DateTime__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__DateTime__c</fullName>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>