default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>