default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__Explanation__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Explanation__c</fullName>
    <label>Explanation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>