default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__isWrapAndComplete__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__isWrapAndComplete__c</fullName>
    <description>True for rows which can be included in Agent Handle Time calculations, e.g. because the agent is in a wrap state or in a completed state.</description>
    <formula>OR(NVMStatsSF__State__c == &quot;0&quot;, CONTAINS(NVMStatsSF__State__c, &quot;Wrap Up&quot;))</formula>
    <inlineHelpText>Edit the formula to include state names for wrap or after call work and call completed states</inlineHelpText>
    <label>isWrapAndComplete</label>
    <type>Checkbox</type>
</CustomField>