default/objects/NVMStatsSF__NVM_Agent_State_Detail__c/fields/NVMStatsSF__MinorState__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__MinorState__c</fullName>
    <label>MinorState</label>
    <length>50</length>
    <type>Text</type>
</CustomField>